tests/ui/dropped_evidence_token.stderr
error: unused `EvidenceToken` that must be used
  --> tests/ui/dropped_evidence_token.rs:12:5
   |
12 |     EvidenceToken::new(b"decision-context-that-is-silently-discarded");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: EvidenceToken must be consumed via .consume() to construct a Verdict; dropping it without use means the decision context was hashed but no Verdict was produced — a logic error in the governance pipeline
note: the lint level is defined here
  --> tests/ui/dropped_evidence_token.rs:5:9
   |
 5 | #![deny(unused_must_use)]
   |         ^^^^^^^^^^^^^^^
help: use `let _ = ...` to ignore the resulting value
   |
12 |     let _ = EvidenceToken::new(b"decision-context-that-is-silently-discarded");
   |     +++++++
